# primeiro-pacote-py

./: LICENSE  README.md  data.json  meu_script.py  pyproject.toml
