[tool.poetry]
name = "primeiro-pacote-py"
version = "0.1.0"
description = "teste primeiro pacote pythono"
authors = ["Juan Funez <juan.funez@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
